package lab.AbstractFactory;

public class ARM implements GPU {
    public String toString() { return "An ARM architecture";}
}
