package lab.AbstractFactory;

public class Android implements OS {
    public String toString() { return "An Android system";}
}
