package lab.AbstractFactory;

public class Bills implements Payment {
    public String toString() { return "Use Bills only";}
}
