package lab.AbstractFactory;

public class CRT implements Display {

    public String toString() { return "Brand new CRT";}
}
