package lab.AbstractFactory;
public interface Cabinet {
	public String toString();
}
