package lab.AbstractFactory;

public class Coins implements Payment {
    public String toString(){ return "Accept Coins only";}
}
