package lab.AbstractFactory;
public interface Display {
	public String toString();
}
