package lab.AbstractFactory;

public interface GPU {
    public String toString();
}
