package lab.AbstractFactory;

public class LCD implements Display {
	public String toString() {
		return "New School LCD";
	}
}
