package lab.AbstractFactory;

public class Linux implements OS {
    public String toString(){ return "A Linux system";}
}
