package lab.AbstractFactory;

public interface Payment {
    public String toString();
}
