package lab.AbstractFactory;

public class Symbian implements OS {
    public String toString() {return "A Symbian system";}
}
