package lab.AbstractFactory;

public class VGA implements Display {
    public String toString() { return "Brand new VGA";}
}
