package lab.AbstractFactory;

public class WindowsME implements OS {
    public String toString() {return "A Windows ME system";}
}
