package lab.AbstractFactory;

public class WindowsXP implements OS {
    public String toString() {return "A Windows XP system";}
}
