package lab.AbstractFactory;

public class X77 implements GPU {
    public String toString(){ return "The X77 architecture";}
}
