package lab.AbstractFactory;

public class X86 implements GPU {
    public String toString(){ return "The X86 architecture";}
}
